--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans:wght@300&family=Playball&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -17,4 +18,87 @@
     height: 80vh;
     width: 25vw;
     background-color: #121212;
+    border-radius: 20px;
+    box-shadow: orangered 0px 3px 8px;
+}
+
+.display-box{
+    height: 20vh;
+    width: 100%;
+    /* background-color: red; */
+}
+
+
+
+#input{
+    height: 20vh;
+    width: 100%;
+    background-color: #121212;
+    /* background-color: red; */
+    /* border-bottom: orangered; */
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    color: orangered;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 48px;
+    padding-right: 30px;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-weight: bold;
+    text-align: right;
+}
+
+input::-webkit-inner-spin-button{
+    visibility: hidden;
+}
+
+.btn{
+    background-color: #121212;
+    height: 12vh;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+
+}
+.white:hover{
+    color: orangered;
+}
+.white{
+    color: white;
+    background-color: #121212 !important;
+    font-size: 48px;
+}
+.orange:hover ,.a:hover,.dot:hover{
+    color: white;
+}
+.orange{
+    color: orangered;
+    background-color: #121212 !important;
+    font-size: 48px;
+}
+.a{
+    color: orangered;
+    background-color: #121212 !important;
+    font-size: 48px;
+    /* width: 100px; */
+    /* padding: 0; */
+}
+
+.box1{
+    /* border-top: 2px solid orangered; */
+    background-color: #121212 !;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+.box2{
+    background-color: #121212;
+    display: grid;
+    grid-template-columns: 25% 25% 50%;
+    border-radius: 20px;
+}
+
+.dot{
+    font-size: 12px;
+    color: orangered;
 }
